--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tispr/loopback",
-  "version": "3.27.0-1",
+  "version": "3.27.0",
   "description": "LoopBack: Open Source Framework for Node.js",
   "homepage": "http://loopback.io",
   "keywords": [
